creating angular project
