# api/src/routes/UserRoutes.js
@@ -1,11 +1,12 @@
 
 const exress = require ("express")
+const  tokenValited  = require("../middleware/auth")
 const UserController = require ("../controllers/UserController.js")
 
 const routes = exress.Router()
 
 routes
-    .get("/users", UserController.listUsers)
+    .get("/users", tokenValited, UserController.listUsers)
     .get("/users/typeUser", UserController.listUserTypeUser)
     .get("/users/:id", UserController.findOneUserById)
     .get("/users/:id/typeUser", UserController.findOneUserById)
